--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "My blog server",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "node": "node app.js"
   },
   "author": "David Rakosi",
   "license": "ISC",
